--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,6 +2,19 @@
     box-sizing: border-box;
 }
 
+.container {
+    max-width: 80%;
+    margin: auto;
+    font-size: $font-size-base;
+    color: $base;
+}
+
 p {
     text-align: left;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 40px;
 }
