--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -22,7 +22,8 @@ $font-weight-bold:  700;
 
 // font-size
 
-$font-size-base :   16px;
+$font-size-small:   16px;
+$font-size-base :   20px;
 $font-size-large:   24px;
 
 
@@ -31,7 +32,7 @@ $font-size-large:   24px;
 //----------------------
 
 $brkpoint-sm    :   1px;
-$brkpoint-md    :   768px;
+$brkpoint-md    :   769px;
 $brkpoint-lg    :   1024px;
 
 
@@ -44,6 +45,7 @@ $brkpoint-lg    :   1024px;
 // font, btn
 
 $gray           :   #808080;
+$white          :   #fff;
 $viking         :   #58e1c1;
 $malibu         :   #51ddfc;
 
@@ -75,3 +77,7 @@ $g-gutter-width: 20px;
 $g-col-count: 12;
 $g-count-max-width: 1040px;
 
+// borders 
+
+$border-rad-base    :   0.5em;
+$border-rad-round   :   50%;
