--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -19,7 +19,11 @@
     margin: auto;
     border-radius: $border-rad-base;
     &:hover {
-        background: $viking;
+        background: $color-primary;
         color: $white;
     }
+    &:active {
+        background-color: $color-primary;
+        color: $white;
+      }
 }
