--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -16,4 +16,6 @@
         $width: 0 0 em(6px) 0,
         $color: $color-primary);
     padding: 10px 0;
+    font-size: $font-size-sm;
+    margin-bottom: 30px;
 }
