--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,11 +4,11 @@
 
 //font-stacks
 
-$font-url-google : 'https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,200,300,400,500,600,700';
+$font-url-google : 'https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,200,300,400,400i,500,600,700';
 $font-primary   :   'IBM Plex Sans', sans-serif;
 $font-secondary-sans : 'Helvetica, Arial, sans-serif';
 
-//font color palettes
+//font color 
 
 $base    : #808080;
 $base-dark: darken($base, 25%);             
@@ -25,8 +25,8 @@ $font-weight-bold:  700;
 // font-size
 
 $font-size-sm:   16px;
-$font-size-base :   20px;
-$font-size-lg:   em(26.5px);
+$font-size-base:   18px;
+$font-size-lg:   1.43em;
 
 
 //----------------------
@@ -34,7 +34,7 @@ $font-size-lg:   em(26.5px);
 //----------------------
 
 $brkpoint-sm    :   1px;
-$brkpoint-md    :   769px;
+$brkpoint-md    :   768px;
 $brkpoint-lg    :   1024px;
 
 
@@ -44,12 +44,13 @@ $brkpoint-lg    :   1024px;
 //COLORS 
 //----------------------
 
-// font, btn
+// font, btn, border
 
 $gray           :   #808080;
 $white          :   #fff;
 $viking         :   #58e1c1;
 $malibu         :   #51ddfc;
+$silver         :   #C0C0C0;
 
 
 //btn
@@ -68,6 +69,19 @@ $french-lilak   :   #deb2ee;
 $vista-blue     :   #88d9a0;
 $sea-pink       :   #ec9fa3;
 $vivid-tangerine:   #fd9f85;
+
+// grid map
+
+$grid-colors: (
+    12  :   $riptide,
+    6   :   $shakespear,
+    4   :   $anakiwa,
+    3   :   $french-lilak,
+    5   :   $vista-blue,
+    7   :   $sea-pink,
+    8   :   $vivid-tangerine
+);
+
 
 $color-primary  :   $viking;
 $color-secondary:   $malibu;
