--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,15 +1,59 @@
 .grid__row {
     @include flexbox($dir: column, $just: space-between);
     text-align: center;
-}
+    margin: em(40px) 0;
+    }
+
 
 .grid__col--9 {
     padding-bottom: 60px;
 }
 
+
+
 .grid__col--12 {
     & p {
-        padding-bottom: 80px;
+        padding-bottom: 60px;
     }
 }
 
+.grid__col--12 {
+    @include flexbox($dir: column, $wrap: wrap, $just: space-between);
+}
+
+.grid__col {
+    @each $col, $color in $grid-colors {
+        &--#{$col}.theme__colors {
+            background-color: $color;
+            text-align: left;
+            padding: em(12px) 0 em(12px) em(5px);
+            border-radius: $border-rad-base;
+            margin: em(5px) 0;
+        }
+    }
+    }
+
+// responsive navigation
+
+
+
+
+
+
+
+//Grid:
+//.container
+//.grid__row
+//.grid__col--2
+//.grid__col--3
+//.grid__col--4
+//.grid__col--5
+//.grid__col--6
+//.grid__col--7
+//.grid__col--8
+//.grid__col--9
+//.grid__col--10
+//.grid__col--11
+//.grid__col--12
+//.centered
+//.theme__colors
