--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,7 +1,7 @@
 .headline--secondary {
     text-align: left;
     font-weight: $font-weight-thin;
-    padding-left: 10px;
+    padding: 20px 0 0 10px;
 }
 
 .headline--primary {
@@ -14,6 +14,7 @@
 .container {
     font-family: $font-primary;
     font-size: $font-size-base;
+    font-weight: $font-weight-light;
     color: $base;
 }
 
@@ -30,6 +31,7 @@
         $rad: em(5px));
     text-align: left;
     font-size: $font-size-lg;
+    font-style: italic;
     margin-left: em(10px);
     padding-left: em(15px);
     border-radius: $border-rad-base;
