--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,10 +6,14 @@
     max-width: 85%;
     margin: auto;
     font-size: $font-size-base;
+    @include mq(large) {
+        max-width: 1200px;
+    }
 }
 
 p {
     text-align: left;
+    line-height: 1.5;
 }
 
 ul {
