--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -9,6 +9,9 @@
 
 .img--avatar {
     margin: 20px auto;
+    @include mq(large) {
+        
+    }
 }
 
 .img--frame {
@@ -20,3 +23,4 @@
     padding: em(15px);
     max-width: 100%;
 }
+
