--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -66,7 +66,7 @@ $color-secondary:   $malibu;
 
 // borders 
 
-$border-rad-base    :   em(5px);
+$border-rad-base    :  5px;
 $border-rad-round   :   50%;
 
 //----------------------
@@ -74,7 +74,7 @@ $border-rad-round   :   50%;
 //----------------------
 
 $g-col-width: 65px;
-$g-gutter-width: 20px;
+$g-gutter-width: 10px;
 $g-col-count: 12;
 $g-count-max-w: 1040px;
 
