--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,592 @@
-/*
-Error: Undefined variable: "$g-col-count".
-        on line 13 of scss/utilities/_functions.scss
-        from line 2 of scss/utilities/_index.scss
-        from line 5 of scss/styles.scss
+.grid__col--1 {
+  width: 7.3033707865%; }
 
-Backtrace:
-scss/utilities/_functions.scss:13
-scss/utilities/_index.scss:2
-scss/styles.scss:5
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:261:in `visit_for'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:329:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:329:in `map'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:329:in `block in visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:326:in `visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:329:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:329:in `map'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:329:in `block in visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:326:in `visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:161:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:10:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:320:in `block in watch'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$g-col-count\".\A         on line 13 of scss/utilities/_functions.scss\A         from line 2 of scss/utilities/_index.scss\A         from line 5 of scss/styles.scss"; }
+.grid__col--2 {
+  width: 15.7303370787%; }
+
+.grid__col--3 {
+  width: 24.1573033708%; }
+
+.grid__col--4 {
+  width: 32.5842696629%; }
+
+.grid__col--5 {
+  width: 41.0112359551%; }
+
+.grid__col--6 {
+  width: 49.4382022472%; }
+
+.grid__col--7 {
+  width: 57.8651685393%; }
+
+.grid__col--8 {
+  width: 66.2921348315%; }
+
+.grid__col--9 {
+  width: 74.7191011236%; }
+
+.grid__col--10 {
+  width: 83.1460674157%; }
+
+.grid__col--11 {
+  width: 91.5730337079%; }
+
+.grid__col--12 {
+  width: 100%; }
+
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */ }
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0; }
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */ }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent; }
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */ }
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder; }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%; }
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sub {
+  bottom: -0.25em; }
+
+sup {
+  top: -0.5em; }
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none; }
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */ }
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible; }
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none; }
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; }
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em; }
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */ }
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline; }
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto; }
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */ }
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */ }
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block; }
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item; }
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none; }
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none; }
+
+* {
+  box-sizing: border-box; }
+
+.container {
+  max-width: 85%;
+  margin: auto;
+  font-size: 18px; }
+  @media (min-width: 1400px) {
+    .container {
+      max-width: 1200px; } }
+
+p {
+  text-align: left;
+  line-height: 1.5; }
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 40px; }
+
+.btn--default {
+  background: #51ddfc; }
+
+.btn--default,
+.btn--success,
+.btn--error,
+.btn--warning,
+.btn--info {
+  border-style: solid;
+  border-width: 0;
+  border-color: #58e1c1;
+  border-radius: 0.2777777778em;
+  color: #fff;
+  padding: 0.6666666667em 0.3888888889em;
+  margin: 0.7777777778em 0; }
+  @media (min-width: 1400px) {
+    .btn--default,
+    .btn--success,
+    .btn--error,
+    .btn--warning,
+    .btn--info {
+      width: 10em; } }
+
+.btn--success {
+  background: #63cc82; }
+
+.btn--error {
+  background: #e4757a; }
+
+.btn--warning {
+  background: #fd7856; }
+
+.btn--info {
+  background: #927BC1; }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 60px; }
+  @media (min-width: 1400px) {
+    .form {
+      width: 22.2222222222em;
+      padding-top: 0; } }
+
+.form__label--hidden {
+  display: none; }
+
+.form__input {
+  border-style: solid;
+  border-width: 0 0 0.3333333333em 0;
+  border-color: #58e1c1;
+  padding: 10px 0;
+  font-size: 16px;
+  margin-bottom: 1.6666666667em; }
+  @media (min-width: 1400px) {
+    .form__input {
+      margin: 0 1.3888888889em 1.6666666667em;
+      max-width: 350px; } }
+
+.grid__row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  margin: 2.2222222222em 0; }
+  @media (min-width: 769px) {
+    .grid__row {
+      display: flex;
+      flex-direction: row; } }
+
+@media (min-width: 1400px) {
+  .grid__col--6 {
+    padding: 0 11.1111111111em 0 3.3333333333em; } }
+
+.grid__col--7.theme__colors.centered {
+  align-self: center;
+  margin: auto; }
+
+@media (min-width: 1400px) {
+  .grid__col--8 {
+    max-width: 70%; } }
+
+.grid__col--9 {
+  padding-bottom: 60px; }
+  @media (min-width: 769px) {
+    .grid__col--9 {
+      padding: 0 20px 0 0; } }
+
+@media (min-width: 769px) {
+  .grid__col--9 ul {
+    display: flex;
+    flex-direction: row;
+    vertical-align: middle; } }
+
+.grid__col--12 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+  .grid__col--12 p {
+    padding-bottom: 60px; }
+  @media (min-width: 1400px) {
+    .grid__col--12 {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      padding: 0 2.2222222222em; } }
+
+.grid__col--12.theme__colors {
+  background-color: #80e8d1;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+.grid__col--6.theme__colors {
+  background-color: #3fabca;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+.grid__col--4.theme__colors {
+  background-color: #7ee6fd;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+.grid__col--3.theme__colors {
+  background-color: #deb2ee;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+.grid__col--5.theme__colors {
+  background-color: #88d9a0;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+.grid__col--7.theme__colors {
+  background-color: #ec9fa3;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+.grid__col--8.theme__colors {
+  background-color: #fd9f85;
+  text-align: left;
+  padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
+  border-radius: 5px;
+  margin: 0.2777777778em 0; }
+
+.img--logo {
+  align-self: center;
+  padding-top: 40px; }
+  @media (min-width: 769px) {
+    .img--logo {
+      padding: 0 0 0 20px;
+      margin-top: 1.3888888889em; } }
+
+.img--avatar {
+  margin: 20px auto; }
+
+.img--frame {
+  border-style: solid;
+  border-width: 0.0555555556em;
+  border-color: #C0C0C0;
+  padding: 0.8333333333em;
+  max-width: 100%; }
+
+.nav {
+  display: block; }
+  .nav a {
+    text-decoration: none;
+    padding: 1em 6.1111111111em;
+    color: #808080; }
+    .nav a:hover {
+      color: #fff; }
+    @media (min-width: 769px) {
+      .nav a {
+        padding: 1em 0.5555555556em; } }
+
+.nav__item {
+  font-size: 18px;
+  color: #808080;
+  width: 100%;
+  padding: 1em 0;
+  margin: auto;
+  border-radius: 5px; }
+  .nav__item:hover {
+    background: #58e1c1;
+    color: #fff; }
+  .nav__item:active {
+    background-color: #58e1c1;
+    color: #fff; }
+
+@media (min-width: 769px) {
+  ul {
+    max-width: 50%;
+    float: right; } }
+
+.headline--secondary {
+  text-align: left;
+  font-weight: 100;
+  padding: 20px 0 0 10px; }
+
+.headline--primary {
+  text-align: left;
+  font-weight: 700;
+  color: #58e1c1;
+  padding-left: 20px; }
+
+.container {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  color: #808080; }
+
+.link {
+  text-decoration: none;
+  color: #51ddfc; }
+
+.blockquote {
+  border-style: solid;
+  border-width: 0 0 0 0.4444444444em;
+  border-color: #58e1c1;
+  border-radius: 0.2777777778em;
+  text-align: left;
+  font-size: 1.43em;
+  font-style: italic;
+  margin-left: 0.5555555556em;
+  padding-left: 0.8333333333em;
+  border-radius: 5px; }
+
+/*# sourceMappingURL=styles.css.map */
