--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -6,7 +6,7 @@
 
 @function g-context($g-col-width, $g-col-count, $g-gutter-width) {
 
-    $g-context: ($g-col-width * $g-col-count) + ($g-gutter-width * ($g-col-count -1));
+    $g-context: ($g-col-width * $g-col-count) + ($g-gutter-width * ($g-col-count - 1));
     @return $g-context;
 }
 
