--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -8,6 +8,10 @@
     }
 }
 
+.grid__col--4.btn--default.theme__colors {
+    width: 96%;
+}
+
 .grid__col--6 {
     @include mq(large) {
         padding: 0 em(200px) 0 em(60px);
@@ -18,6 +22,10 @@
 .grid__col--7.theme__colors.centered {
     align-self: center;
     margin: auto;
+    width: 100%;
+    @include mq(medium) {
+        flex-basis: 58%;
+    }
 }
 
 .grid__col--8 {
@@ -29,14 +37,16 @@
 .grid__col--9 {
     padding-bottom: 60px;
     @include mq(medium) {
+    }
+    @include mq(large) {
         padding: 0 20px 0 0;
+        margin: auto;
     }
 }
 
 .grid__col--9 ul {
 @include mq(medium) {
     @include flexbox($dir: row);
-    vertical-align: middle;
     }
 }       
 
@@ -60,9 +70,13 @@
             padding: em(12px) 0 em(12px) em(5px);
             border-radius: $border-rad-base;
             margin: em(5px) 0;
+            @include mq(medium) {
+                text-align: center;
+            }
         }
     }
-    }
+}
+
 
 
 
