--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -64,6 +64,8 @@ $purple-mountains-majesty : #927BC1;
 $color-primary  :   $viking;
 $color-secondary:   $malibu;
 
+$gutter: 75px;
+
 // borders 
 
 $border-rad-base    :  5px;
