--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,66 @@
-.grid__col--1 {
-  width: 7.3033707865%; }
+.nav a, .link {
+  text-decoration: none; }
 
-.grid__col--2 {
-  width: 15.7303370787%; }
+.img--avatar, .img--frame {
+  margin: 20px auto;
+  vertical-align: middle; }
 
-.grid__col--3 {
-  width: 24.1573033708%; }
+.headline--secondary, .headline--primary {
+  text-align: left; }
 
-.grid__col--4 {
-  width: 32.5842696629%; }
+.nav__item {
+  font-size: 18px;
+  color: #808080;
+  width: 100%;
+  padding: 1em 0;
+  margin: auto;
+  border-radius: 5px; }
+  .nav__item:hover {
+    background: #58e1c1;
+    color: #fff; }
+  .nav__item:active {
+    background-color: #58e1c1;
+    color: #fff; }
+  @media (min-width: 1400px) {
+    .nav__item {
+      min-width: 115px; } }
 
-.grid__col--5 {
-  width: 41.0112359551%; }
-
-.grid__col--6 {
-  width: 49.4382022472%; }
-
-.grid__col--7 {
-  width: 57.8651685393%; }
-
-.grid__col--8 {
-  width: 66.2921348315%; }
-
-.grid__col--9 {
-  width: 74.7191011236%; }
-
-.grid__col--10 {
-  width: 83.1460674157%; }
-
-.grid__col--11 {
-  width: 91.5730337079%; }
-
-.grid__col--12 {
-  width: 100%; }
-
+@media (min-width: 769px) {
+  .grid__col--1 {
+    width: 7.3033707865%; } }
+@media (min-width: 769px) {
+  .grid__col--2 {
+    width: 15.7303370787%; } }
+@media (min-width: 769px) {
+  .grid__col--3 {
+    width: 24.1573033708%; } }
+@media (min-width: 769px) {
+  .grid__col--4 {
+    width: 32.5842696629%; } }
+@media (min-width: 769px) {
+  .grid__col--5 {
+    width: 41.0112359551%; } }
+@media (min-width: 769px) {
+  .grid__col--6 {
+    width: 49.4382022472%; } }
+@media (min-width: 769px) {
+  .grid__col--7 {
+    width: 57.8651685393%; } }
+@media (min-width: 769px) {
+  .grid__col--8 {
+    width: 66.2921348315%; } }
+@media (min-width: 769px) {
+  .grid__col--9 {
+    width: 74.7191011236%; } }
+@media (min-width: 769px) {
+  .grid__col--10 {
+    width: 83.1460674157%; } }
+@media (min-width: 769px) {
+  .grid__col--11 {
+    width: 91.5730337079%; } }
+@media (min-width: 769px) {
+  .grid__col--12 {
+    width: 100%; } }
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -353,8 +380,9 @@ ul {
   padding-left: 0;
   margin-top: 40px; }
 
-.btn--default {
-  background: #51ddfc; }
+.btn--default.theme__colors {
+  background: #51ddfc;
+  max-width: 100%; }
 
 .btn--default,
 .btn--success,
@@ -368,13 +396,15 @@ ul {
   color: #fff;
   padding: 0.6666666667em 0.3888888889em;
   margin: 0.7777777778em 0; }
-  @media (min-width: 1400px) {
+  @media (min-width: 769px) {
     .btn--default,
     .btn--success,
     .btn--error,
     .btn--warning,
     .btn--info {
-      width: 10em; } }
+      display: flex;
+      flex: 1 10%;
+      margin: 20px; } }
 
 .btn--success {
   background: #63cc82; }
@@ -425,13 +455,20 @@ ul {
       display: flex;
       flex-direction: row; } }
 
+.grid__col--4.btn--default.theme__colors {
+  width: 96%; }
+
 @media (min-width: 1400px) {
   .grid__col--6 {
     padding: 0 11.1111111111em 0 3.3333333333em; } }
 
 .grid__col--7.theme__colors.centered {
   align-self: center;
-  margin: auto; }
+  margin: auto;
+  width: 100%; }
+  @media (min-width: 769px) {
+    .grid__col--7.theme__colors.centered {
+      flex-basis: 58%; } }
 
 @media (min-width: 1400px) {
   .grid__col--8 {
@@ -439,15 +476,15 @@ ul {
 
 .grid__col--9 {
   padding-bottom: 60px; }
-  @media (min-width: 769px) {
+  @media (min-width: 1400px) {
     .grid__col--9 {
-      padding: 0 20px 0 0; } }
+      padding: 0 20px 0 0;
+      margin: auto; } }
 
 @media (min-width: 769px) {
   .grid__col--9 ul {
     display: flex;
-    flex-direction: row;
-    vertical-align: middle; } }
+    flex-direction: row; } }
 
 .grid__col--12 {
   display: flex;
@@ -470,42 +507,63 @@ ul {
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--12.theme__colors {
+      text-align: center; } }
 .grid__col--6.theme__colors {
   background-color: #3fabca;
   text-align: left;
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--6.theme__colors {
+      text-align: center; } }
 .grid__col--4.theme__colors {
   background-color: #7ee6fd;
   text-align: left;
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--4.theme__colors {
+      text-align: center; } }
 .grid__col--3.theme__colors {
   background-color: #deb2ee;
   text-align: left;
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--3.theme__colors {
+      text-align: center; } }
 .grid__col--5.theme__colors {
   background-color: #88d9a0;
   text-align: left;
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--5.theme__colors {
+      text-align: center; } }
 .grid__col--7.theme__colors {
   background-color: #ec9fa3;
   text-align: left;
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--7.theme__colors {
+      text-align: center; } }
 .grid__col--8.theme__colors {
   background-color: #fd9f85;
   text-align: left;
   padding: 0.6666666667em 0 0.6666666667em 0.2777777778em;
   border-radius: 5px;
   margin: 0.2777777778em 0; }
+  @media (min-width: 769px) {
+    .grid__col--8.theme__colors {
+      text-align: center; } }
 
 .img--logo {
   align-self: center;
@@ -514,9 +572,6 @@ ul {
     .img--logo {
       padding: 0 0 0 20px;
       margin-top: 1.3888888889em; } }
-
-.img--avatar {
-  margin: 20px auto; }
 
 .img--frame {
   border-style: solid;
@@ -528,7 +583,6 @@ ul {
 .nav {
   display: block; }
   .nav a {
-    text-decoration: none;
     padding: 1em 6.1111111111em;
     color: #808080; }
     .nav a:hover {
@@ -537,32 +591,16 @@ ul {
       .nav a {
         padding: 1em 0.5555555556em; } }
 
-.nav__item {
-  font-size: 18px;
-  color: #808080;
-  width: 100%;
-  padding: 1em 0;
-  margin: auto;
-  border-radius: 5px; }
-  .nav__item:hover {
-    background: #58e1c1;
-    color: #fff; }
-  .nav__item:active {
-    background-color: #58e1c1;
-    color: #fff; }
-
 @media (min-width: 769px) {
   ul {
-    max-width: 50%;
-    float: right; } }
+    float: right;
+    clear: right; } }
 
 .headline--secondary {
-  text-align: left;
   font-weight: 100;
   padding: 20px 0 0 10px; }
 
 .headline--primary {
-  text-align: left;
   font-weight: 700;
   color: #58e1c1;
   padding-left: 20px; }
@@ -574,7 +612,6 @@ ul {
   color: #808080; }
 
 .link {
-  text-decoration: none;
   color: #51ddfc; }
 
 .blockquote {
