--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -11,12 +11,13 @@
 }
 
 @for $i from 1 through $g-col-count {
-  
-$context: g-context($g-col-width, $g-col-count, $g-gutter-width);
-$target: ($g-col-width * $i) + ($g-gutter-width * ($i - 1));
-  
-  // Column modifier classes
-   .grid__col--#{$i} {
-     width: percentage($target / $context);
-   }
+  @include mq(medium) {
+    $context: g-context($g-col-width, $g-col-count, $g-gutter-width);
+    $target: ($g-col-width * $i) + ($g-gutter-width * ($i - 1));
+      
+      // Column modifier classes
+       .grid__col--#{$i} {
+         width: percentage($target / $context);
+       }
   }
+}
